
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef char uint32_t ;


 int MSG_ID_SIZE ;
 char htonl (char) ;
 int memcpy (char*,char*,int) ;

void
set_descr_hdr(char * msg,
       char *msg_id,
       char descr,
       char ttl,
       char hops,
       uint32_t len){

  uint32_t len_net = htonl(len);

  memcpy(msg, msg_id, MSG_ID_SIZE);
  memcpy(msg + MSG_ID_SIZE, &descr, 1);
  memcpy(msg + MSG_ID_SIZE + 1, &ttl, 1);
  memcpy(msg + MSG_ID_SIZE + 2, &hops, 1);


  memcpy(msg + MSG_ID_SIZE + 3, &len, sizeof(uint32_t));
}
