; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_24857.c_set_descr_hdr.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_24857.c_set_descr_hdr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MSG_ID_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_descr_hdr(i8* %0, i8* %1, i8 signext %2, i8 signext %3, i8 signext %4, i8 signext %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8, align 1
  %10 = alloca i8, align 1
  %11 = alloca i8, align 1
  %12 = alloca i8, align 1
  %13 = alloca i8, align 1
  store i8* %0, i8** %7, align 8
  store i8* %1, i8** %8, align 8
  store i8 %2, i8* %9, align 1
  store i8 %3, i8* %10, align 1
  store i8 %4, i8* %11, align 1
  store i8 %5, i8* %12, align 1
  %14 = load i8, i8* %12, align 1
  %15 = call signext i8 @htonl(i8 signext %14)
  store i8 %15, i8* %13, align 1
  %16 = load i8*, i8** %7, align 8
  %17 = load i8*, i8** %8, align 8
  %18 = load i32, i32* @MSG_ID_SIZE, align 4
  %19 = call i32 @memcpy(i8* %16, i8* %17, i32 %18)
  %20 = load i8*, i8** %7, align 8
  %21 = load i32, i32* @MSG_ID_SIZE, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds i8, i8* %20, i64 %22
  %24 = call i32 @memcpy(i8* %23, i8* %9, i32 1)
  %25 = load i8*, i8** %7, align 8
  %26 = load i32, i32* @MSG_ID_SIZE, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds i8, i8* %25, i64 %27
  %29 = getelementptr inbounds i8, i8* %28, i64 1
  %30 = call i32 @memcpy(i8* %29, i8* %10, i32 1)
  %31 = load i8*, i8** %7, align 8
  %32 = load i32, i32* @MSG_ID_SIZE, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds i8, i8* %31, i64 %33
  %35 = getelementptr inbounds i8, i8* %34, i64 2
  %36 = call i32 @memcpy(i8* %35, i8* %11, i32 1)
  %37 = load i8*, i8** %7, align 8
  %38 = load i32, i32* @MSG_ID_SIZE, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds i8, i8* %37, i64 %39
  %41 = getelementptr inbounds i8, i8* %40, i64 3
  %42 = call i32 @memcpy(i8* %41, i8* %12, i32 1)
  ret void
}

declare dso_local signext i8 @htonl(i8 signext) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
